# Vision

./: .gitignore  CMakeLists.txt  README.md  main.cpp
AppWindow/: AppWindow.cpp  AppWindow.h
DataCompute/: CMakeLists.txt  DataCompute.cu  DataCompute.h
Image/: Image.cpp  Image.h  Pixel.cpp  Pixel.h  QtImage.cpp  QtImage.h
ImageProcessor/: CMakeLists.txt  ImageProcessor.cpp  ImageProcessor.h
Matrix/: Matrix.cpp  Matrix.h  Matrix.tpp
Scripts/: main.py
